legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr81988.c-4.8.2-2.out.txt
pr81988.c: In function ‘foo’:
pr81988.c:18:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < 4; i++)
     ^
pr81988.c:18:5: note: use option -std=c99 or -std=gnu99 to compile your code
